@@ -1,5 +1,9 @@
 Revision history for DBIx::Class
 
+    * Fixes
+        - More robust behavior under heavily threaded environments - make
+          sure we do not have refaddr reuse in the global storage registry
+
 0.08204 2012-11-08
     * New Features / Changes
         - SQLMaker now accepts \'literal' with the 'for' rs attribute as an
